@@ -91,11 +91,13 @@ ignored.
 .BI "DISTRIBUTION=" "distribution"
 
 .TP
+.BI "BUILDRESULT=" "directory"
+
+.TP
 .BI "BASEPATH=" "distribution"
 
 .TP
-.BI "MIRRORSITE=" "distribution"
-
+.BI "MIRRORSITE=" "http://mirror"
 
 .SH "EXAMPLES"
 
