@@ -76,10 +76,13 @@ ignored.
 .BI "DISTRIBUTION=" "distribution"
 
 .TP
+.BI "BUILDRESULT=" "directory"
+
+.TP
 .BI "BASEPATH=" "distribution"
 
 .TP
-.BI "MIRRORSITE=" "distribution"
+.BI "MIRRORSITE=" "http://mirror"
 
 .TP
 .BI "KERNEL_IMAGE=" "vmlinuz"
