@@ -2,9 +2,9 @@ cowdancer (0.27) UNRELEASED; urgency=low
 
   * support configuration files in cowbuilder.
   * add reference to pbuilder documentation from cowbuilder documentation.
-  * add qemubuilder package.
+  * add qemubuilder package. -- this is more of a prototype, but enjoy.
 
- -- Junichi Uekawa <dancer@debian.org>  Sun, 27 May 2007 23:38:08 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Sun, 27 May 2007 23:43:55 +0900
 
 cowdancer (0.26) unstable; urgency=low
 
